--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="error_user_invalid">This email address is invalid</string>
     <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_first">Please fill with your first name</string>
+    <string name="error_invalid_last">Please fill with your last name</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
